2007-04-13  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/screenshot.glade:
	* data/totem.schemas.in:
	* src/totem-screenshot.c: (totem_screenshot_make_filename_for_dir),
	(totem_screenshot_temp_file_create),
	(totem_screenshot_temp_file_remove), (drag_begin),
	(totem_screenshot_response), (totem_screenshot_init),
	(totem_screenshot_finalize), (totem_screenshot_new),
	(totem_screenshot_class_init):
	* src/totem-screenshot.h:
	* src/totem-uri.c: (totem_pictures_dir), (totem_add_pictures_dir):
	* src/totem-uri.h:
	* src/totem.c: (totem_action_take_screenshot):
	Kill the old screenshot dialogue, and use a simple file chooser widget
	with a preview image instead. Remember the path of where the previous
	screenshot was saved. Use the Pictures directory as the default save
	directory (Closes: RH #232788)

2007-04-13  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-qt.c:
	(totem_pl_parser_add_quicktime_rtsptext),
	(totem_pl_parser_add_quicktime_metalink),
	(totem_pl_parser_is_quicktime):
	Fix RTSPtext parsing for one-line URLs (Closes: #429383)

2007-04-12  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (totem_statusbar_create):
	Use the GtkStatusbar's set_has_resize_grip, not the TotemStatusbar one

2007-04-12  Bastien Nocera  <hadess@hadess.net>

	* src/totem-statusbar.c: (totem_statusbar_size_allocate):
	Fix compilation with GTK+ < 2.11

2007-04-12  Christian Persch  <chpe@gnome.org>

	* src/totem-statusbar.c: (totem_statusbar_class_init),
	(totem_statusbar_init), (totem_statusbar_set_text),
	(totem_statusbar_timeout_pop), (totem_statusbar_push),
	(totem_statusbar_sync_description), (totem_statusbar_dispose),
	(totem_statusbar_size_allocate):
	* src/totem-statusbar.h: Make TotemStatusbar subclass GtkStatusbar.
	This fixes the visual inconsistence with other applications. Bug
	#428988.

	* src/totem.c: (window_state_event_cb): Hide the resize grip when the
	window is maximised.
